--- a/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/DetallesPlanillas.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/DetallesPlanillas.cshtml
@@ -32,6 +32,11 @@
                                     @Html.DropDownList("mes", ViewBag.ListaMeses as SelectList, null, new { @class = "form-control text-uppercase" })
                                 </div>
 
+                                <div class="form-group col-lg-3 col-md-4 col-6">
+                                    <label for="idCategoria">Categoria</label>
+                                    @Html.DropDownList("idCategoria", ViewBag.ListaCategoriasPlanillas as SelectList, new { @class = "form-control text-uppercase" })
+                                </div>
+
                                 <div class="form-group col-lg-2 col-4">
                                     <label>&nbsp;</label>
                                     <button type="button" id="btnConsultar" class="btn btn-block btn-outline-primary"><i class="fa fa-fw fa-search"></i> Consultar</button>
@@ -69,13 +74,19 @@
                 </tfoot>
             </table>
         </div>
+
+        <div class="row" id="divDescargaExcel">
+            <div class="col-lg-12">
+                <button type="button" id="btnExcelDescargarDetalle" class="btn btn-link pl-0">Descargar información en Excel [.xlsx]</button>
+            </div>
+        </div>
     </div>
 </div>
 
 @section scripts {
     <script type="text/javascript">
         $(document).ready(function () {
-            generarDatatableTrabajadoresConPlanilla(null, null);
+            generarDatatableTrabajadoresConPlanilla(null, null, null);
 
             $("#frmDetallePlanillaPorTrabajador").on("change", "#anio", function () {
                 let cmbDestino = $('#frmDetallePlanillaPorTrabajador #mes');
@@ -88,8 +99,14 @@
             $("#frmDetallePlanillaPorTrabajador").on("click", "#btnConsultar", function () {
                 let anio = $("#frmDetallePlanillaPorTrabajador #anio").val();
                 let mes = $("#frmDetallePlanillaPorTrabajador #mes").val();
+                let idCategoria = $("#frmDetallePlanillaPorTrabajador #idCategoria").val();
 
-                generarDatatableTrabajadoresConPlanilla(anio, mes);
+                generarDatatableTrabajadoresConPlanilla(anio, mes, idCategoria);
+            });
+
+            $(document).on("click", "#btnExcelDescargarDetalle", function (e) {
+                document.forms.frmDetallePlanillaPorTrabajador.action = "@Url.Action("DescargaDetallePlanilla", "Reportes")";
+                document.forms.frmDetallePlanillaPorTrabajador.submit();
             });
 
             $(document).on('change', '.modal-body #cmbCategorias', function () {
@@ -120,10 +137,11 @@
             });
         });
 
-        function generarDatatableTrabajadoresConPlanilla(anio, mes) {
+        function generarDatatableTrabajadoresConPlanilla(anio, mes, idCategoria) {
             let parametros = {
                 anio: anio,
-                mes: mes
+                mes: mes,
+                idCategoria: idCategoria
             };
 
             $('#dataTableTrabajadoresConPlanilla').DataTable({
@@ -176,7 +194,16 @@
                     loadingRecords: "Cargando...",
                     processing: "Procesando..."
                 },
-                searching: true
+                searching: true,
+                initComplete: function () {
+                    var api = this.api();
+
+                    if (api.rows().count() > 0) {
+                        $('#divDescargaExcel').css('display', 'flex');
+                    } else {
+                        $('#divDescargaExcel').css('display', 'none');
+                    }
+                }
             });
         }
     </script>
