Terminado excel detalle de planila, agregado excel con data de trabajadores

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
@@ -60,6 +60,12 @@
                     </tfoot>
                 </table>
             </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <a href="@Url.Action("DescargarListaTrabajadores", "Trabajadores")" class="btn btn-link pl-0">Descargar información en Excel [.xlsx]</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
