Avance carga por lote de trabajadores

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/ResumenPlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/ResumenPlanilla.cshtml
@@ -55,9 +55,11 @@
                         <th>Planilla</th>
                         <th>Año</th>
                         <th>Mes</th>
+                        <th>Cod.Trabajador</th>
                         <th>Tip.Doc.</th>
                         <th>Num.Doc.</th>
                         <th>Apellidos y Nombres</th>
+                        <th>Estado</th>
                         <th>Régimen</th>
                         <th>Remu.</th>
                         <th>Reint.</th>
@@ -72,9 +74,11 @@
                         <th>Planilla</th>
                         <th>Año</th>
                         <th>Mes</th>
+                        <th>Cod.Trabajador</th>
                         <th>Tip.Doc.</th>
                         <th>Num.Doc.</th>
                         <th>Apellidos y Nombres</th>
+                        <th>Estado</th>
                         <th>Régimen</th>
                         <th>Remu.</th>
                         <th>Reint.</th>
@@ -139,9 +143,11 @@
                     { data: 'categoriaPlanillaDesc' },
                     { data: 'anio' },
                     { data: 'mesDesc' },
+                    { data: 'trabajadorCod' },
                     { data: 'tipoDocumentoDesc' },
                     { data: 'numDocumento' },
                     { data: 'apellidosNombre' },
+                    { data: 'estadoDesc' },
                     { data: 'regimenDesc' },
                     { data: 'totalRemuneracionFormat' },
                     { data: 'totalReintegroFormat' },
