Agregado carga masiva de trabajadores nuevos.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
@@ -123,7 +123,7 @@
                 ],
                 bStateSave: true,
                 bDestroy: true,
-                lengthMenu: [[5, 10, 25, 50, -1], [5, 10, 25, 50, "Todas"]],
+                lengthMenu: [[5, 10, 15, 20, 25, 50, -1], [5, 10, 15, 20, 25, 50, "Todas"]],
                 iDisplayLength: 10,
                 language: {
                     search: "Buscar: ",
