--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
@@ -232,7 +232,7 @@
                         targets: -2,
                         orderable: false,
                         render: function (data, type, row) {
-                            return `<a class="modal-link-lg" href="@Url.Action("ConceptosAsignados", "PlantillaPlanillaConcepto")/${data}` +
+                            return `<a class="modal-link-xl" href="@Url.Action("ConceptosAsignados", "PlantillaPlanillaConcepto")/${data}` +
                                 '"><i class="fa bi-ui-checks" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Asignar</span></a>';
                         }
                     },
