--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_CargaMasiva.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_CargaMasiva.cshtml
@@ -76,6 +76,7 @@
                     <thead class="thead-dark">
                         <tr>
                             <th></th>
+                            <th>Acción</th>
                             <th>Tip.Doc.</th>
                             <th>Num.Doc.</th>
                             <th>Ap.Paterno</th>
@@ -105,6 +106,7 @@
                     <tfoot>
                         <tr>
                             <th></th>
+                            <th>Acción</th>
                             <th>Tip.Doc.</th>
                             <th>Num.Doc.</th>
                             <th>Ap.Paterno</th>
@@ -236,6 +238,7 @@
             data: jsonObject,
             columns: [
                 { data: 'esRegistroCorrecto' },
+                { data: 'operacionDesc' },
                 { data: 'tipoDocumentoCod' },
                 { data: 'numDocumento' },
                 { data: 'apePaterno' },
@@ -263,43 +266,43 @@
             ],
             columnDefs: [
                 {
-                    targets: 1,
+                    targets: 2,
                     render: function (data, type, row) {
                         return row.esTipoDocumentoCorrecto ? row.tipoDocumentoDesc : data;
                     }
                 },
                 {
-                    targets: 6,
+                    targets: 7,
                     render: function (data, type, row) {
                         return row.esSexoCorrecto ? row.sexoDesc : data;
                     }
                 },
                 {
-                    targets: 8,
+                    targets: 9,
                     render: function (data, type, row) {
                         return row.esVinculoCorrecto ? row.vinculoDesc : data;
                     }
                 },
                 {
-                    targets: 9,
+                    targets: 10,
                     render: function (data, type, row) {
                         return row.esGrupoOcupacionalCorrecto ? row.grupoOcupacionalDesc : data;
                     }
                 },
                 {
-                    targets: 11,
+                    targets: 12,
                     render: function (data, type, row) {
                         return row.esCategoriaDocenteCorrecta ? row.categoriaDocenteDesc : data;
                     }
                 },
                 {
-                    targets: 12,
+                    targets: 13,
                     render: function (data, type, row) {
                         return row.esDedicacionDocenteCorrecta ? row.dedicacionDocenteDesc : data;
                     }
                 },
                 {
-                    targets: 23,
+                    targets: 24,
                     render: function (data, type, row) {
                         return row.esEstadoTrabajadorCorrecto ? row.estadoTrabajadorDesc : data;
                     }
@@ -359,7 +362,7 @@
                 }
 
                 //Filtro
-                api.columns([24]).every(function () {
+                api.columns([25]).every(function () {
                     let column = this;
 
                     let select = document.createElement('select');
