Agregado símbolo (% o s/) para saber si un valor externo es porcentual o fijo en el mantenimiento de valores externos

--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/_MantenimientoValorExterno.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/_MantenimientoValorExterno.cshtml
@@ -95,7 +95,7 @@
         <div class="form-row">
             <div class="col-12">
                 <div class="form-group">
-                    <label class="control-label" for="valorConcepto">Valor</label>
+                    <label class="control-label" for="valorConcepto">@ViewBag.TipoValor</label>
                     @if (Model.tienePlanilla)
                     {
                         @Html.TextBoxFor(model => model.valorConcepto, new { @class = "form-control", @disabled = "disabled" })
