--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Mantenimiento.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Mantenimiento.cshtml
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <div class="table-responsive mt-4" style="min-height:300px">
+        <div class="table-responsive mt-4">
             <table class="table table-hover" id="dataTableValoresExternos" width="100%">
                 <thead class="thead-dark">
                     <tr>
@@ -83,6 +83,14 @@
             </table>
         </div>
 
+        <div class="row" id="divDescargaExcel">
+            <div class="col-lg-12">
+                <button type="button" id="btnExcelDescargar" class="btn btn-link pl-0">Descargar información en Excel [.xlsx]</button>
+            </div>
+            <div class="col-lg-12">
+                <button type="button" id="btnExcelDescargarFormato" class="btn btn-link pl-0">Descargar información con formato en Excel [.xlsx]</button>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -158,6 +166,16 @@
                     }
                 });
             });
+
+            $(document).on("click", "#btnExcelDescargar", function (e) {
+                document.forms.frmConsultaInformacionExterna.action = "@Url.Action("DescargaInformacionExterna", "Reportes")";
+                document.forms.frmConsultaInformacionExterna.submit();
+            });
+
+            $(document).on("click", "#btnExcelDescargarFormato", function (e) {
+                document.forms.frmConsultaInformacionExterna.action = "@Url.Action("DescargaFormatoInformacionExternaRegistrada", "Reportes")";
+                document.forms.frmConsultaInformacionExterna.submit();
+            });
         });
 
         function generarDatatableInformacionExterna(anio, mes, idCategoria) {
@@ -169,7 +187,7 @@
 
             $('#dataTableValoresExternos').DataTable({
                 ajax: {
-                    'url': '@Url.Action("ObtenerListaInformaciónExterna", "ValoresExternos")',
+                    'url': '@Url.Action("ObtenerListaInformacionExterna", "ValoresExternos")',
                     'data': parametros,
                     'type': 'get'
                 },
@@ -239,7 +257,16 @@
                     loadingRecords: "Cargando...",
                     processing: "Procesando..."
                 },
-                searching: true
+                searching: true,
+                initComplete: function () {
+                    var api = this.api();
+
+                    if (api.rows().count() > 0) {
+                        $('#divDescargaExcel').css('display', 'flex');
+                    } else {
+                        $('#divDescargaExcel').css('display', 'none');
+                    }
+                }
             });
         }
     </script>
